fix(hero): width in text-box white, for better align with the shadow

--- a/style.css
+++ b/style.css
@@ -127,6 +127,7 @@
         right: 30px;
         background-color: white;
         padding: 10px 10px;
+        width: 100%;
         
     }
     
